tests/fixtures/invalid/pow_dict_str_none.py
# Cannot call pow() with Dict[str, int], Str, None
x = pow({"a": 1}, "hello", None)
